# bess-dispatch-optimizer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STATE.md  architecture.md  conventions.md  formulation.md  glossary.md  market_reference.md  references.md
docs/decisions/: 0001-pyomo-for-modelling.md  0002-highs-default-solver.md  0003-grid-side-metering.md  0004-two-release-structure.md  0005-commit-real-fixture-data.md  0006-day-ahead-15min-native.md  0007-stochastic-value-requires-risk-or-recourse.md  0008-uv-ruff-import-linter-toolchain.md  0009-soc-per-unit-in-config.md  0010-greedy-heuristic-in-optimizer.md  0011-circuit-breaker-semantics.md  0012-separate-ingestion-breaker.md  0013-shared-degradation-vocabulary.md  0014-cqr-over-split-conformal.md  0015-drift-staleness-before-regime.md  0016-drift-coverage-as-distinct-state.md  0017-residual-path-bootstrap-generation.md  0018-forward-selection-over-kmeans.md  0019-day-ahead-intraday-two-stage.md  0020-cvar-mean-risk-over-robust.md  0021-mpc-recourse-out-of-sample-vss.md  0022-storage-duration-reported-axis.md  0023-milp-dual-resolve-rule.md  0024-day-ahead-forecast-feature-alignment.md  0025-semiparametric-gpd-scenario-tail.md  0026-conditional-scale-tail-channel.md  README.md
docs/specs/: R1.1-deterministic-core.md  R1.2-degradation.md  R1.3-validation.md  R1.4a-backtest.md  R1.4b-entsoe-loader.md  R1.4c-ingestion-guard.md  R1.5-serving.md  R1.5b-ingestion-guard.md  R2.1-forecaster.md  R2.1b-drift-monitor.md  R2.1c-exogenous-fundamentals.md  R2.2-scenarios.md  R2.2b-spike-tail.md  R2.2c-conditional-tail.md  R2.3-stochastic-recourse.md  R2.4-explainability.md  R2.5-value-evaluation.md  R2.5b-tail-dispatch-value.md  _TEMPLATE.md
examples/: README.md  benchmark_scaling.py  conditional_tail_demo.py  drift_demo.py  duration_sweep.py  explain_demo.py  forecast_demo.py  ingestion_guard_demo.py  scenario_reduction_demo.py  spike_tail_demo.py  stochastic_demo.py  vss_study.py  worked_example.py
scripts/: lint_docs.py
src/bess/: __init__.py
src/bess/api/: __init__.py  app.py  models.py  service.py
src/bess/assets/: __init__.py  battery.py
src/bess/backtest/: __init__.py  baselines.py  engine.py
src/bess/data/: __init__.py  entsoe.py  fixtures.py  ingestion_guard.py
src/bess/explain/: __init__.py  duals.py
src/bess/forecaster/: __init__.py  drift.py  evaluate.py  features.py  forecast.py
src/bess/optimizer/: __init__.py  core.py  heuristics.py
src/bess/recourse/: __init__.py  mpc.py
src/bess/scenarios/: __init__.py  generate.py  metrics.py  reduce.py  tail.py
src/bess/stochastic/: __init__.py  risk.py  study.py  twostage.py  vss.py
src/bess/validation/: __init__.py  preflight.py
src/bess/viz/: __init__.py  backtest_plots.py  explain_plots.py  forecast_plots.py  stochastic_plots.py
tests/golden/: test_golden_api.py  test_golden_backtest.py  test_golden_conditional_tail.py  test_golden_degradation.py  test_golden_entsoe_parse.py  test_golden_explain.py  test_golden_fundamentals.py  test_golden_oracles.py  test_golden_spike_tail.py  test_golden_stochastic.py  test_golden_tail_value.py  test_golden_validation.py  test_golden_value_study.py  test_ingestion_guard.py  test_sanity_band.py  test_scenario_reduction.py
tests/integration/: test_conditional_tail_live.py  test_entsoe_live.py  test_forecaster_live.py  test_fundamentals_live.py  test_ingestion_guard_live.py  test_scenarios_live.py  test_spike_tail_live.py  test_stochastic_live.py  test_tail_value_live.py  test_value_study_live.py
tests/property/: test_api.py  test_backtest.py  test_conditional_tail.py  test_degradation.py  test_explain.py  test_forecaster_drift.py  test_forecaster_features.py  test_fundamentals.py  test_ingestion_guard_faults.py  test_invariants.py  test_scenarios.py  test_spike_tail.py  test_stochastic.py  test_tail_value.py  test_validation.py  test_value_study.py
tests/unit/: test_api_service.py  test_backtest_windowing.py  test_duration_sweep.py  test_entsoe.py  test_examples_smoke.py  test_fixtures.py  test_forecaster_model.py  test_ingestion_guard_composition.py  test_solver_smoke.py  test_viz_smoke.py
