[project]
name = "bess-dispatch-optimizer"
version = "0.1.0"
description = "BESS day-ahead dispatch optimizer — deterministic MILP core (R1), stochastic/recourse layer (R2)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MO FIROUZ" }]
dependencies = [
    "pyomo>=6.7",
    "highspy>=1.7",        # HiGHS solver; backs Pyomo's appsi_highs interface
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bess"]

# --- lint / format -----------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import-sort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

# --- tests -------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# --- layering (CLAUDE.md §5) — enforced via `uv run lint-imports` -------------
# Authoritative rule: api → explain → stochastic → recourse → optimizer → validation → assets;
# forecaster / scenarios feed stochastic; optimizer must NOT import api.
# Modules not listed (backtest, data, viz) are intentionally left
# unconstrained until their phases pin down a real dependency.
[tool.importlinter]
root_package = "bess"

[[tool.importlinter.contracts]]
name = "Core dispatch chain (api → … → assets; optimizer ⊥ api)"
type = "layers"
containers = ["bess"]
layers = [
    "api",
    "explain",
    "stochastic",
    "recourse",
    "optimizer",
    "validation",
    "assets",
]

[[tool.importlinter.contracts]]
name = "Forecast feed (stochastic ← scenarios ← forecaster)"
type = "layers"
containers = ["bess"]
layers = [
    "stochastic",
    "scenarios",
    "forecaster",
]
