[project]
name = "bess-dispatch-optimizer"
version = "0.1.0"
description = "BESS day-ahead dispatch optimizer — deterministic MILP core (R1), stochastic/recourse layer (R2)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MO FIROUZ", email = "mohammadhamedft@gmail.com" }]
dependencies = [
    "pyomo>=6.7",
    # HiGHS solver; backs Pyomo's appsi_highs interface. Capped below 1.14: highspy
    # 1.14.0 mis-solves a small MILP the R1.2 scale-invariance gate generates
    # (eta_charge=0.99999, dt=0.25, small caps: presolve declares a provably
    # feasible model infeasible; presolve-off returns a suboptimal "optimum").
    # Verified correct on 1.12.0/1.13.0 with the same instance; lift the cap only
    # after re-running that gate against the new version.
    "highspy>=1.7,<1.14",
    "pydantic>=2.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "entsoe-py>=0.8.0",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
]
# Plotting for the worked example (bess.viz / examples/). Not installed by default
# or in CI; the figure smoke test skips when matplotlib is absent.
examples = ["matplotlib>=3.8"]
# Probabilistic forecaster (bess.forecaster, R2.1). Heavy ML stack kept out of the
# core install and the R1 CI job; a dedicated CI step installs this group and runs
# the coverage gate. Forecaster tests skip when the stack is absent.
forecast = [
    "lightgbm>=4.3",
    "mapie>=1.0",
    "scikit-learn>=1.4",
    "holidays>=0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bess"]

# --- lint / format -----------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import-sort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

# --- types -------------------------------------------------------------------
# `uv run mypy src` — CI gate. Scope is src/ (the shipped package); tests are
# exercised by pytest and stay unchecked. Untyped third-party stacks (Pyomo,
# entsoe-py, the optional forecast/plotting groups) are silenced per-module
# below so every remaining error is ours.
[tool.mypy]
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pyomo.*",
    "entsoe.*",
    "highspy.*",
    "lightgbm.*",
    "mapie.*",
    "sklearn.*",
    "holidays.*",
    "matplotlib.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# --- tests -------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: live ENTSO-E API test (R1.4b) — skipped unless ENTSOE_API_TOKEN + network (+ CA bundle) are present; never runs in CI",
]
filterwarnings = [
    # entsoe-py parses ENTSO-E XML with bs4's html.parser — its internal warning,
    # not actionable on our side; silenced so the parser test output stays clean.
    "ignore::bs4.XMLParsedAsHTMLWarning",
    # Starlette's TestClient deprecation notice about httpx — dependency-internal.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

# --- layering (CLAUDE.md §5) — enforced via `uv run lint-imports` -------------
# Authoritative rule: api → explain → stochastic → recourse → optimizer → validation → assets;
# forecaster / scenarios feed stochastic; optimizer must NOT import api.
# backtest is an offline tool consuming optimizer/validation/assets/data — it must
# not widen the serving chain (no api/explain/stochastic/recourse). data is a leaf
# (loaders + fixtures; imports nothing else in bess). Modules not listed (viz) are
# intentionally left unconstrained until their phases pin down a real dependency.
[tool.importlinter]
root_package = "bess"

[[tool.importlinter.contracts]]
name = "Core dispatch chain (api → … → assets; optimizer ⊥ api)"
type = "layers"
containers = ["bess"]
layers = [
    "api",
    "explain",
    "stochastic",
    "recourse",
    "optimizer",
    "validation",
    "assets",
]

[[tool.importlinter.contracts]]
name = "Forecast feed (stochastic ← scenarios ← forecaster)"
type = "layers"
containers = ["bess"]
layers = [
    "stochastic",
    "scenarios",
    "forecaster",
]

[[tool.importlinter.contracts]]
name = "backtest is an offline tool (must not import the serving chain)"
type = "forbidden"
source_modules = ["bess.backtest"]
forbidden_modules = [
    "bess.api",
    "bess.explain",
    "bess.stochastic",
    "bess.recourse",
    "bess.scenarios",
    "bess.forecaster",
]

[[tool.importlinter.contracts]]
name = "data is a leaf (imports nothing else in bess)"
type = "forbidden"
source_modules = ["bess.data"]
forbidden_modules = [
    "bess.api",
    "bess.explain",
    "bess.stochastic",
    "bess.recourse",
    "bess.scenarios",
    "bess.forecaster",
    "bess.optimizer",
    "bess.validation",
    "bess.assets",
    "bess.backtest",
]
